acm/cluster/constraint-nodeport_not_allowed.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
spec:
  match:
    enforcementAction: deny
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    excludedNamespaces: ["kube-system"]
